@@ -1,3 +1,8 @@
+2015-09-30  Carl Hetherington  <cth@carlh.net>
+
+	* Fix various confusions with subtitles and
+	changing video frame rates.
+
 2015-09-29  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.3.10 released.
